Closed
Bug 150761
Opened 23 years ago
Closed 23 years ago
[viewpoint] Mouse scrollbutton crashes windowless plugins
Categories
(Core Graveyard :: Plug-ins, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.0.1
People
(Reporter: bmartin, Assigned: serhunt)
References
()
Details
(Keywords: crash, topembed+, Whiteboard: [PL RTM] [ADT2 RTM][verified-trunk])
Attachments
(2 files)
|
686 bytes,
patch
|
Details | Diff | Splinter Review | |
|
1.55 KB,
patch
|
peterlubczynski-bugs
:
review+
sfraser_bugs
:
superreview+
jud
:
approval+
|
Details | Diff | Splinter Review |
Testing w/N7PR1 20020512
System:
Win98SE/Win2k
PS/2 or USB mouse with scrollbutton
Steps:
1. Download latest Viewpoint plugin
2. Launch N7PR1
3. Load the Sony Vaio demo at http://cole.viewpoint.com/~compuserve
4. Move the scrollbutton while demo loads or after demo loads
Results:
Netscp.exe crashes
See talkback data:
http://climate.netscape.com/reports/SingleIncidentInfo.cfm?dynamicBBID=7208838
Comment 1•23 years ago
|
||
Stack points at |HandleEvent|:
ns4xPluginInstance::HandleEvent
[d:\builds\seamonkey\mozilla\modules\plugin\base\src\ns4xPluginInstance.cpp,
line 1094]
nsPluginInstanceOwner::ProcessEvent
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsObjectFrame.cpp, line 3288]
nsPluginInstanceOwner::DispatchMouseToPlugin
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsObjectFrame.cpp, line 3226]
nsPluginInstanceOwner::MouseUp
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsObjectFrame.cpp, line 3186]
nsEventListenerManager::HandleEvent
[d:\builds\seamonkey\mozilla\content\events\src\nsEventListenerManager.cpp, line
1333]
nsGenericElement::HandleDOMEvent
[d:\builds\seamonkey\mozilla\content\base\src\nsGenericElement.cpp, line 1665]
nsEventStateManager::DoWheelScroll
[d:\builds\seamonkey\mozilla\content\events\src\nsEventStateManager.cpp, line 1489]
nsEventStateManager::PostHandleEvent
[d:\builds\seamonkey\mozilla\content\events\src\nsEventStateManager.cpp, line 1806]
PresShell::HandleEventInternal
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 6126]
PresShell::HandleEvent
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 6028]
nsViewManager::HandleEvent
[d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp, line 2076]
nsView::HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp, line 306]
nsViewManager::DispatchEvent
[d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp, line 1887]
HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp, line 83]
nsWindow::DispatchEvent
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 869]
nsWindow::DispatchWindowEvent
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 886]
nsWindow::ProcessMessage
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 4137]
nsWindow::ProcessMessage
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 4113]
nsWindow::WindowProc
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 1131]
Keywords: crash
Summary: Using scrollbutton mouse while trying to manipulate Viewpoint content crashes Netscp.exe → [viewpoint] Using scrollbutton mouse while trying to manipulate Sony Vaio demo
Comment 2•23 years ago
|
||
assigning to av
Assignee: beppe → av
Priority: -- → P2
Target Milestone: --- → mozilla1.0.1
I could not find anything refferring to Sony Vaio on
http://cole.viewpoint.com/~compuserve page but was able to reproduce the crash
on CD ROM 3D demo (updating the URL field).
Although it does crash with the older versions, I could not reproduce it with
the current Mozilla trunk and branch, so looks like it got fixed along the way.
Marking WFM.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → WORKSFORME
Comment 4•23 years ago
|
||
Reopening, I can reproduce 100% on today's build:
Gecko/20020618 Netscape/7.0 WinXP
I can not reproduce in debug builds (trunk or branch). Here are the steps:
1. Install Viewpoint
2. Visit http://cole.viewpoint.com/~compuserve
3. Size your window so you get scrollbars
4. Near the bottom, click on the Sony Vaio laptop demo
5. When the popup opens, scrolling causes the crash
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
updated summary
Summary: [viewpoint] Using scrollbutton mouse while trying to manipulate Sony Vaio demo → [viewpoint] Using scrollbutton mouse while trying to manipulate Sony Vaio demo crashes Netscp.exe
Comment 7•23 years ago
|
||
this bug is the same as: http://bugscape.netscape.com/show_bug.cgi?id=16870
nominating
Keywords: nsbeta1
Summary: [viewpoint] Using scrollbutton mouse while trying to manipulate Sony Vaio demo crashes Netscp.exe → [viewpoint] Using scrollbutton mouse while trying to manipulate Sony Vaio demo crashes Netscp.exe in release builds
Whiteboard: [PL RTM]
Comment 8•23 years ago
|
||
this one should have been nsbeta1+ already, adding ADT2
I found the problem. Mouse wheel event simply is not defined in nsGUIEvent.h
Patch is coming.
Updated•23 years ago
|
Whiteboard: [PL RTM][ADT2] → [PL RTM][ADT2 RTM]
| Assignee | ||
Comment 10•23 years ago
|
||
This is a generic problem. When mouse wheel event comes, content event manager
artificially generates mouse_out event before firing the wheel event. This is
performed with the purpose of removing possible tooltip when you start
scrolling. In creating the event structure, |nsGUIEvent::nativeMsg| remains
uninitialized which causes crash in the plugin code in release builds. The
simple fix would be just to add the initialization to that code.
Summary: [viewpoint] Using scrollbutton mouse while trying to manipulate Sony Vaio demo crashes Netscp.exe in release builds → [viewpoint] Mouse scrollbutton crashes windowless plugins
| Assignee | ||
Comment 11•23 years ago
|
||
This one-liner is pretty straightforward. Please review.
| Assignee | ||
Comment 12•23 years ago
|
||
The same patch with more context for easier reading. Please review.
Comment 13•23 years ago
|
||
Comment on attachment 89019 [details] [diff] [review]
patch v.1.1
r=peterl
Attachment #89019 -
Flags: review+
Updated•23 years ago
|
Updated•23 years ago
|
Blocks: 143047
Whiteboard: [PL RTM][ADT2 RTM] → [PL RTM] [ADT2 RTM] [ETA Needed]
Whiteboard: [PL RTM] [ADT2 RTM] [ETA Needed] → [PL RTM] [ADT2 RTM][SR Needed!] [ETA Needed]
Comment 14•23 years ago
|
||
Comment on attachment 89019 [details] [diff] [review]
patch v.1.1
sr=sfraser
Attachment #89019 -
Flags: superreview+
| Assignee | ||
Comment 15•23 years ago
|
||
Fix is on the trunk. Nominating for the branch.
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Keywords: adt1.0.1
Resolution: --- → FIXED
Whiteboard: [PL RTM] [ADT2 RTM][SR Needed!] [ETA Needed] → [PL RTM] [ADT2 RTM]
Comment 16•23 years ago
|
||
Shrirang, Please verify the fix as soon as you can to clear the way for ADT
approval.
Comment 17•23 years ago
|
||
adt1.0.1+ added pending verification on the trunk. Please get mozilla approval,
and verify on the trunk, before landing. If neither of these happens before
7/2/2002, please come to adt and discuss.
Updated•23 years ago
|
Attachment #89019 -
Flags: approval+
Comment 18•23 years ago
|
||
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
Keywords: mozilla1.0.1+
Comment 19•23 years ago
|
||
*** Bug 154936 has been marked as a duplicate of this bug. ***
Comment 20•23 years ago
|
||
verified on trunk 070108 , this works great now. other mouse events work fine
too...nothing has regressed.
Status: RESOLVED → VERIFIED
Whiteboard: [PL RTM] [ADT2 RTM] → [PL RTM] [ADT2 RTM][verified-trunk]
| Assignee | ||
Comment 21•23 years ago
|
||
Thanks for fast verification, Shrir. In the branch now.
Keywords: mozilla1.0.1+ → fixed1.0.1
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•