Bug 150761 -- scroll button causes crash with windowless plugins, r=peterl, sr=sfraser